# robot_arm_PMC

./: CMakeLists.txt  README.md  only_ros_object.py  package.xml  setup.py  test.py
launch/: object_detection.launch
msg/: camera.msg  coordinate.msg
src/: .client.py.swp  .gitignore  camera_dataset.py  client.py  client_launch.py  client_willie.py  object_detection_tutorial.py  only_ros_object.py  server.py  server_launch.py  server_real_time.py
src/cython/: CMakeLists.txt  client.c  client.pyx  server.c  server.pyx  total.c  total.pyx
src/data/: label_map.pbtxt
src/protos/: ssd.proto  ssd_pb2.py
srv/: ObjDetectionWithName.srv  PointCloudWithBBox.srv  detection.srv  detection_PMC.srv  detection_PMC_half.srv
